; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_dwarf2read.c_dwarf2_read_section.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_dwarf2read.c_dwarf2_read_section.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.objfile = type { i32, i32* }
%struct.TYPE_5__ = type { i32 }

@SEEK_SET = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [45 x i8] c"Dwarf Error: Can't read DWARF data from '%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @dwarf2_read_section(%struct.objfile* %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.objfile*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store %struct.objfile* %0, %struct.objfile** %4, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  %10 = load %struct.objfile*, %struct.objfile** %4, align 8
  %11 = getelementptr inbounds %struct.objfile, %struct.objfile* %10, i32 0, i32 1
  %12 = load i32*, i32** %11, align 8
  store i32* %12, i32** %6, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %14 = call i64 @bfd_get_section_size(%struct.TYPE_5__* %13)
  store i64 %14, i64* %9, align 8
  %15 = load i64, i64* %9, align 8
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %55

18:                                               ; preds = %2
  %19 = load %struct.objfile*, %struct.objfile** %4, align 8
  %20 = getelementptr inbounds %struct.objfile, %struct.objfile* %19, i32 0, i32 0
  %21 = load i64, i64* %9, align 8
  %22 = call i64 @obstack_alloc(i32* %20, i64 %21)
  %23 = inttoptr i64 %22 to i8*
  store i8* %23, i8** %7, align 8
  %24 = load i32*, i32** %6, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %26 = load i8*, i8** %7, align 8
  %27 = bitcast i8* %26 to i32*
  %28 = call i64 @symfile_relocate_debug_section(i32* %24, %struct.TYPE_5__* %25, i32* %27)
  %29 = inttoptr i64 %28 to i8*
  store i8* %29, i8** %8, align 8
  %30 = load i8*, i8** %8, align 8
  %31 = icmp ne i8* %30, null
  br i1 %31, label %32, label %34

32:                                               ; preds = %18
  %33 = load i8*, i8** %8, align 8
  store i8* %33, i8** %3, align 8
  br label %55

34:                                               ; preds = %18
  %35 = load i32*, i32** %6, align 8
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load i32, i32* @SEEK_SET, align 4
  %40 = call i64 @bfd_seek(i32* %35, i32 %38, i32 %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %49, label %42

42:                                               ; preds = %34
  %43 = load i8*, i8** %7, align 8
  %44 = load i64, i64* %9, align 8
  %45 = load i32*, i32** %6, align 8
  %46 = call i64 @bfd_bread(i8* %43, i64 %44, i32* %45)
  %47 = load i64, i64* %9, align 8
  %48 = icmp ne i64 %46, %47
  br i1 %48, label %49, label %53

49:                                               ; preds = %42, %34
  %50 = load i32*, i32** %6, align 8
  %51 = call i32 @bfd_get_filename(i32* %50)
  %52 = call i32 @error(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i32 %51)
  br label %53

53:                                               ; preds = %49, %42
  %54 = load i8*, i8** %7, align 8
  store i8* %54, i8** %3, align 8
  br label %55

55:                                               ; preds = %53, %32, %17
  %56 = load i8*, i8** %3, align 8
  ret i8* %56
}

declare dso_local i64 @bfd_get_section_size(%struct.TYPE_5__*) #1

declare dso_local i64 @obstack_alloc(i32*, i64) #1

declare dso_local i64 @symfile_relocate_debug_section(i32*, %struct.TYPE_5__*, i32*) #1

declare dso_local i64 @bfd_seek(i32*, i32, i32) #1

declare dso_local i64 @bfd_bread(i8*, i64, i32*) #1

declare dso_local i32 @error(i8*, i32) #1

declare dso_local i32 @bfd_get_filename(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
